Kubernetes/k8-white-cluster/helm-infra/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-testnew-egopay-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: 'true'
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    #nginx.ingress.kubernetes.io/auth-tls-verify-depth: '3'
    #nginx.ingress.kubernetes.io/client-body-buffer-size: 1024k
    #nginx.ingress.kubernetes.io/proxy-connect-timeout: '180'
    #nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout http_502 http_503 http_504
    #nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: '60'
    #nginx.ingress.kubernetes.io/proxy-next-upstream-tries: '3'
    #nginx.ingress.kubernetes.io/proxy-read-timeout: '180'
    #nginx.ingress.kubernetes.io/proxy-send-timeout: '180'
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.testnew.egopay.ru
      secretName: all-egopay-api-tls
  rules:
    - host: dashboard.testnew.egopay.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
